src/test/run-pass/auxiliary/issue_38715.rs
#![allow(duplicate_macro_exports)]

#[macro_export]
macro_rules! foo { ($i:ident) => {} }

#[macro_export]
macro_rules! foo { () => {} }
